[metadata]
name = IPSO Phen
author = Felicia Antoni Maviane Macia
author-email = ipsophen@inra.fr
summary = IPSO Phen an image processing toolbox for mass phenotyping
description-file = readme.md
description-content-type = text/markdown; charset=UTF-8
home-page = http://github.com/tpmp-inra/ipso_phen
project_urls =
    Bug Tracker = http://github.com/tpmp-inra/ipso_phen/issues
    Documentation = https://ipso-phen.readthedocs.io/en/latest/index.html
    Source Code = http://github.com/tpmp-inra/ipso_phen
license = GPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: UI
    Intended Audience :: Developers
    Intended Audience :: Researchers
    License :: GPL v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    image processing
    Python
    OpenCV
requires-python = >= 3.6

[files]
packages =
    ipso_phen

[extras]
developer = 
    mkdocs
    mkdocs-material
    mkdocs-minify-plugin
    pbr
    yapf
    flake8
    pymdown
    pyflakes
    pycodestyle
    mccabe
    livereload
    Pygments
    PyYAML
    pyqt5-tools
